GNOME Bugzilla – Bug 158126
Crashes opening an empty XLS file
Last modified: 2004-12-22 21:47:04 UTC
$ touch foo.xls $ gnumeric foo.xls Backtrace was generated from '/usr/bin/gnumeric' (no debugging symbols found)...Using host libthread_db library "/lib/tls/libthread_db.so.1". (no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...[Thread debugging using libthread_db enabled] [New Thread -1223918848 (LWP 13278)] 0xb771840e in __waitpid_nocancel () from /lib/tls/libpthread.so.0
+ Trace 51905
I am not used to that libgsf stuff, but it seems to me that in plugins/lotus-123/boot.c in the function lotus_file_probe the code if (h == NULL && GSF_LE_GET_GUINT16 (h+0) != LOTUS_BOF) return FALSE; should be: if (h == NULL || GSF_LE_GET_GUINT16 (h+0) != LOTUS_BOF) return FALSE;
Agreed. Please commit.
fixed in cvs head