http://bugzilla.gnome.org/show_bug.cgi?id=158126 don't work with null

2004-11-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=158126
	* boot.c (lotus_file_probe): don't work with null pointer